--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-		<title>Under construction</title>
+        <title>Under construction</title>
+        <script type="text/javascript" src="HTML5-History-API/history.js"></script>
 	</head>
 	<body>
-		<div style="text-align: center; font-size: 20px; padding: 30px 0;">Under construction</div>
+        <div style="text-align: center; font-size: 20px; padding: 30px 0;">Under construction</div>
 	</body>
 </html>
