Add link to demos

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <div style="text-align: center; font-size: 20px; padding: 30px 0;">Under construction</div>
+        <div style="text-align: center; font-size: 20px; padding: 30px 0;"><a href="/demos/">Go to demos</a></div>
     </body>
 </html>
